--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,185 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Antic&family=Anton&family=Jura:wght@300..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Racing+Sans+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+@font-face {
+  font-family: 'SpaceMonkey';
+  src: url('./font/SpaceMonkeyBold-Ea5On.otf');
+}
+
+@font-face {
+  font-family: 'Hacked';
+  src: url('./font/Hacked-KerX.ttf');
+}
+
+@font-face {
+  font-family: 'SuperBrigade3D';
+  src: url('./font/SuperBrigade3D-vm8l9.otf');
+}
+
+@font-face {
+  font-family: 'SuperBrigadeChrome';
+  src: url('./font/SuperBrigadeChrome-w1Yn6.otf');
+}
+
+@font-face {
+  font-family: 'RollboxThin';
+  src: url('./font/RollboxThin-ywad5.ttf');
+}
+
+@font-face {
+  font-family: 'SuperBrigadeLaser';
+  src: url('./font/SuperBrigadeLaser-X3KlG.otf');
+}
+
+@font-face {
+  font-family: 'RollboxLight';
+  src: url('./font/RollboxLight-VGAXy.ttf');
+}
+
+@font-face {
+  font-family: 'RollboxMedium';
+  src: url('./font/RollboxMedium-JRxYB.ttf');
+}
+
+/* @font-face {
+  font-family: 'TimeBurnerBold';
+  src: url('./font/RollboxRegular-jE2lv.ttf');
+} */
+
+@font-face {
+  font-family: 'DassaultOutline';
+  src: url('./font/DassaultOutline-4wXK.otf');
+}
+
+.anton-regular {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.anton-regular {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.antic-regular {
+  font-family: "Antic", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.jura-regular {
+  font-family: "Jura", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+html{
+  background-color: #131313;
+  overflow-x: hidden;
+
+
+}
+
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: "Montserrat", sans-serif;
+  background-color: #131313;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.video-container {
+  position: relative; /* Change to relative positioning */
+  width: 100%;
+  height: 100vh; /* Adjust height as needed */
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
+#bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* padding: 0 2rem; */
+  /* color: #a2a2a2; */
+}
+
+.nav a{
+  cursor: pointer;
+  text-decoration: none;
+  color: #a2a2a2;
+  transition: font-size 0.3s ease;
+}
+
+.nav a:hover{
+  color: white;
+  font-size: 1.25rem; /* 24px */
+line-height: 2rem; /* 32px */
+}
+
+.nav a:last-child:hover {
+  text-decoration: underline;
+}
+
+.desc{
+  /* position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-45%, 0%); */
+  color: white;
+  max-width: 700px;
+  text-align: center;
+}
+
+
+@keyframes rotate {
   from {
-    transform: rotate(0deg);
+      transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+      transform: rotate(360deg);
   }
 }
+
+/* Apply the animation on hover */
+.uncharted-img:hover {
+  animation: rotate 10s linear infinite; /* Adjust the duration and timing function as needed */
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #ffffff;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #23232329;
+}
+
+
+
+
